# Routes/AdminRoutes.js
@@ -6,5 +6,6 @@ const auth = require('../middleware/auth')
 router.get('/users',AdminController.getUsers)
 router.delete('/user',auth,AdminController.deleteUser)
 router.delete('/dungeon',auth,AdminController.deleteDungeons)
+router.delete('/histories',auth,AdminController.deleteHistories)
 
 module.exports = router
